@@ -4,6 +4,7 @@ Changes in 2.8.2
 ----------------
 - Bugfix unset modfunc even if no values posted
 - adapt height if US Letter paper in HonorRoll.php & HonorRollSubject.php
+- Bugfix wkhtmltopdf ContentOperationNotPermittedError in HonorRollSubject.php
 
 Changes in 2.8.1
 ----------------
